// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cluster.sql > line 8 1`] = `
[
  "CREATE TABLE clstr_tst (a SERIAL PRIMARY KEY,
	b INT,
	c TEXT,
	d TEXT,
	CONSTRAINT clstr_tst_con FOREIGN KEY (b) REFERENCES clstr_tst_s)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "clstr_tst",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 33,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "serial",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 47,
                  "typeName": {
                    "location": 49,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c",
                  "is_local": true,
                  "location": 55,
                  "typeName": {
                    "location": 57,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "d",
                  "is_local": true,
                  "location": 64,
                  "typeName": {
                    "location": 66,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "Constraint": {
                  "conname": "clstr_tst_con",
                  "contype": "CONSTR_FOREIGN",
                  "fk_attrs": [
                    {
                      "String": {
                        "sval": "b",
                      },
                    },
                  ],
                  "fk_del_action": "a",
                  "fk_matchtype": "s",
                  "fk_upd_action": "a",
                  "initially_valid": true,
                  "location": 73,
                  "pktable": {
                    "inh": true,
                    "location": 125,
                    "relname": "clstr_tst_s",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 14 1`] = `
[
  "CREATE INDEX clstr_tst_b ON clstr_tst (b)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "clstr_tst_b",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "b",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 28,
              "relname": "clstr_tst",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 19 1`] = `
[
  "INSERT INTO clstr_tst_s (b) VALUES (0)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 25,
                  "name": "b",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "clstr_tst_s",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 36,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 26 1`] = `
[
  "CREATE TABLE clstr_tst_inh () INHERITS (clstr_tst)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 40,
                  "relname": "clstr_tst",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "clstr_tst_inh",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 28 1`] = `
[
  "INSERT INTO clstr_tst (b, c) VALUES (11, 'once')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 23,
                  "name": "b",
                },
              },
              {
                "ResTarget": {
                  "location": 26,
                  "name": "c",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "clstr_tst",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 11,
                            },
                            "location": 37,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 41,
                            "sval": {
                              "sval": "once",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 60 1`] = `
[
  "INSERT INTO clstr_tst (b, c, d) VALUES (6, 'seis', repeat('xyzzy', 100000))",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 23,
                  "name": "b",
                },
              },
              {
                "ResTarget": {
                  "location": 26,
                  "name": "c",
                },
              },
              {
                "ResTarget": {
                  "location": 29,
                  "name": "d",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "clstr_tst",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 6,
                            },
                            "location": 40,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 43,
                            "sval": {
                              "sval": "seis",
                            },
                          },
                        },
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 58,
                                  "sval": {
                                    "sval": "xyzzy",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 100000,
                                  },
                                  "location": 67,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "repeat",
                                },
                              },
                            ],
                            "location": 51,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 62 1`] = `
[
  "CLUSTER clstr_tst_c ON clstr_tst",
  {
    "stmts": [
      {
        "stmt": {
          "ClusterStmt": {
            "indexname": "clstr_tst_c",
            "relation": {
              "inh": true,
              "location": 23,
              "relname": "clstr_tst",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 64 1`] = `
[
  "SELECT a,b,c,substring(d for 30), length(d) from clstr_tst",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 49,
                  "relname": "clstr_tst",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 11,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                      ],
                      "location": 11,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "d",
                                },
                              },
                            ],
                            "location": 23,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": -1,
                          },
                        },
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "ival": {
                                  "ival": 30,
                                },
                                "location": 29,
                              },
                            },
                            "location": -1,
                            "typeName": {
                              "location": -1,
                              "names": [
                                {
                                  "String": {
                                    "sval": "pg_catalog",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "int4",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_SQL_SYNTAX",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "substring",
                          },
                        },
                      ],
                      "location": 13,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 34,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "d",
                                },
                              },
                            ],
                            "location": 41,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "length",
                          },
                        },
                      ],
                      "location": 34,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 70 1`] = `
[
  "INSERT INTO clstr_tst_inh VALUES (0, 100, 'in child table')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "clstr_tst_inh",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 34,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 100,
                            },
                            "location": 37,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 42,
                            "sval": {
                              "sval": "in child table",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 76 1`] = `
[
  "SELECT conname FROM pg_constraint WHERE conrelid = 'clstr_tst'::regclass
ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 20,
                  "relname": "pg_constraint",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 82,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "conname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "conrelid",
                        },
                      },
                    ],
                    "location": 40,
                  },
                },
                "location": 49,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 51,
                        "sval": {
                          "sval": "clstr_tst",
                        },
                      },
                    },
                    "location": 62,
                    "typeName": {
                      "location": 64,
                      "names": [
                        {
                          "String": {
                            "sval": "regclass",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 85 1`] = `
[
  "SELECT pg_class.relname FROM pg_index, pg_class, pg_class AS pg_class_2
WHERE pg_class.oid=indexrelid
	AND indrelid=pg_class_2.oid
	AND pg_class_2.relname = 'clstr_tst'
	AND indisclustered",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 29,
                  "relname": "pg_index",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 39,
                  "relname": "pg_class",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "pg_class_2",
                  },
                  "inh": true,
                  "location": 49,
                  "relname": "pg_class",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "pg_class",
                          },
                        },
                        {
                          "String": {
                            "sval": "relname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "pg_class",
                              },
                            },
                            {
                              "String": {
                                "sval": "oid",
                              },
                            },
                          ],
                          "location": 78,
                        },
                      },
                      "location": 90,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "indexrelid",
                              },
                            },
                          ],
                          "location": 91,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "indrelid",
                              },
                            },
                          ],
                          "location": 107,
                        },
                      },
                      "location": 115,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "pg_class_2",
                              },
                            },
                            {
                              "String": {
                                "sval": "oid",
                              },
                            },
                          ],
                          "location": 116,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "pg_class_2",
                              },
                            },
                            {
                              "String": {
                                "sval": "relname",
                              },
                            },
                          ],
                          "location": 136,
                        },
                      },
                      "location": 155,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 157,
                          "sval": {
                            "sval": "clstr_tst",
                          },
                        },
                      },
                    },
                  },
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "indisclustered",
                          },
                        },
                      ],
                      "location": 174,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 103,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 92 1`] = `
[
  "ALTER TABLE clstr_tst CLUSTER ON clstr_tst_b_c",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "name": "clstr_tst_b_c",
                  "subtype": "AT_ClusterOn",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "clstr_tst",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 100 1`] = `
[
  "ALTER TABLE clstr_tst SET WITHOUT CLUSTER",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "subtype": "AT_DropCluster",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "clstr_tst",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 108 1`] = `
[
  "CLUSTER pg_toast.pg_toast_826 USING pg_toast_826_index",
  {
    "stmts": [
      {
        "stmt": {
          "ClusterStmt": {
            "indexname": "pg_toast_826_index",
            "relation": {
              "inh": true,
              "location": 8,
              "relname": "pg_toast_826",
              "relpersistence": "p",
              "schemaname": "pg_toast",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 111 1`] = `
[
  "CREATE USER regress_clstr_user",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_clstr_user",
            "stmt_type": "ROLESTMT_USER",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 126 1`] = `
[
  "CLUSTER clstr_2",
  {
    "stmts": [
      {
        "stmt": {
          "ClusterStmt": {
            "relation": {
              "inh": true,
              "location": 8,
              "relname": "clstr_2",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 128 1`] = `
[
  "CLUSTER clstr_1_pkey ON clstr_1",
  {
    "stmts": [
      {
        "stmt": {
          "ClusterStmt": {
            "indexname": "clstr_1_pkey",
            "relation": {
              "inh": true,
              "location": 24,
              "relname": "clstr_1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 131 1`] = `
[
  "  SELECT * FROM clstr_2 UNION ALL
  SELECT * FROM clstr_3",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "all": true,
            "larg": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 16,
                    "relname": "clstr_2",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 9,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 9,
                      },
                    },
                  },
                },
              ],
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_UNION",
            "rarg": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 50,
                    "relname": "clstr_3",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 43,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 43,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 135 1`] = `
[
  "DELETE FROM clstr_1",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "clstr_1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 147 1`] = `
[
  "SET SESSION AUTHORIZATION regress_clstr_user",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 26,
                  "sval": {
                    "sval": "regress_clstr_user",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 165 1`] = `
[
  "INSERT INTO clustertest VALUES (10)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "clustertest",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 10,
                            },
                            "location": 32,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 172 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 175 1`] = `
[
  "UPDATE clustertest SET key = 100 WHERE key = 10",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "clustertest",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 23,
                  "name": "key",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 100,
                      },
                      "location": 29,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "key",
                        },
                      },
                    ],
                    "location": 39,
                  },
                },
                "location": 43,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 10,
                    },
                    "location": 45,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 185 1`] = `
[
  "SELECT * FROM clustertest",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "clustertest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 189 1`] = `
[
  "COMMIT",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 194 1`] = `
[
  "create temp table clstr_temp (col1 int primary key, col2 text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "clstr_temp",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "col1",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 39,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "col2",
                  "is_local": true,
                  "location": 52,
                  "typeName": {
                    "location": 57,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 200 1`] = `
[
  "RESET SESSION AUTHORIZATION",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 203 1`] = `
[
  "DROP TABLE clustertest",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "clustertest",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 209 1`] = `
[
  "CREATE TABLE clstrpart (a int) PARTITION BY RANGE (a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 31,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 51,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_RANGE",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "clstrpart",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 217 1`] = `
[
  " -- fails
DROP INDEX clstrpart_only_idx",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "clstrpart_only_idx",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_INDEX",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 221 1`] = `
[
  "CREATE TEMP TABLE old_cluster_info AS SELECT relname, level, relfilenode, relkind FROM pg_partition_tree('clstrpart'::regclass) AS tree JOIN pg_class c ON c.oid=tree.relid ",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 18,
                "relname": "old_cluster_info",
                "relpersistence": "t",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "JoinExpr": {
                      "jointype": "JOIN_INNER",
                      "larg": {
                        "RangeFunction": {
                          "alias": {
                            "aliasname": "tree",
                          },
                          "functions": [
                            {
                              "List": {
                                "items": [
                                  {
                                    "FuncCall": {
                                      "args": [
                                        {
                                          "TypeCast": {
                                            "arg": {
                                              "A_Const": {
                                                "location": 105,
                                                "sval": {
                                                  "sval": "clstrpart",
                                                },
                                              },
                                            },
                                            "location": 116,
                                            "typeName": {
                                              "location": 118,
                                              "names": [
                                                {
                                                  "String": {
                                                    "sval": "regclass",
                                                  },
                                                },
                                              ],
                                              "typemod": -1,
                                            },
                                          },
                                        },
                                      ],
                                      "funcformat": "COERCE_EXPLICIT_CALL",
                                      "funcname": [
                                        {
                                          "String": {
                                            "sval": "pg_partition_tree",
                                          },
                                        },
                                      ],
                                      "location": 87,
                                    },
                                  },
                                  {},
                                ],
                              },
                            },
                          ],
                        },
                      },
                      "quals": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "c",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "oid",
                                  },
                                },
                              ],
                              "location": 155,
                            },
                          },
                          "location": 160,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "tree",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "relid",
                                  },
                                },
                              ],
                              "location": 161,
                            },
                          },
                        },
                      },
                      "rarg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "c",
                          },
                          "inh": true,
                          "location": 141,
                          "relname": "pg_class",
                          "relpersistence": "p",
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 45,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "relname",
                              },
                            },
                          ],
                          "location": 45,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 54,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "level",
                              },
                            },
                          ],
                          "location": 54,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 61,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "relfilenode",
                              },
                            },
                          ],
                          "location": 61,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 74,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "relkind",
                              },
                            },
                          ],
                          "location": 74,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 233 1`] = `
[
  "CREATE TABLE ptnowner(i int unique) PARTITION BY LIST (i)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 36,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 55,
                    "name": "i",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_LIST",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ptnowner",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_UNIQUE",
                        "location": 28,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 241 1`] = `
[
  "  SELECT oid, relname, relfilenode FROM pg_partition_tree('ptnowner') AS tree
  JOIN pg_class AS c ON c.oid=tree.relid",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "jointype": "JOIN_INNER",
                  "larg": {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "tree",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "location": 58,
                                        "sval": {
                                          "sval": "ptnowner",
                                        },
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "pg_partition_tree",
                                      },
                                    },
                                  ],
                                  "location": 40,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                  "quals": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c",
                              },
                            },
                            {
                              "String": {
                                "sval": "oid",
                              },
                            },
                          ],
                          "location": 102,
                        },
                      },
                      "location": 107,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "tree",
                              },
                            },
                            {
                              "String": {
                                "sval": "relid",
                              },
                            },
                          ],
                          "location": 108,
                        },
                      },
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "c",
                      },
                      "inh": true,
                      "location": 85,
                      "relname": "pg_class",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "oid",
                          },
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "relname",
                          },
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 23,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "relfilenode",
                          },
                        },
                      ],
                      "location": 23,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 256 1`] = `
[
  "set enable_indexscan = off",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 23,
                  "sval": {
                    "sval": "off",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_indexscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 259 1`] = `
[
  "set maintenance_work_mem = '1MB'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 27,
                  "sval": {
                    "sval": "1MB",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "maintenance_work_mem",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 267 1`] = `
[
  "reset enable_indexscan",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "enable_indexscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 271 1`] = `
[
  "CREATE TABLE clstr_expression(id serial primary key, a int, b text COLLATE "C")",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "clstr_expression",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 40,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "serial",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 53,
                  "typeName": {
                    "location": 55,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 67,
                  },
                  "colname": "b",
                  "is_local": true,
                  "location": 60,
                  "typeName": {
                    "location": 62,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 286 1`] = `
[
  "CLUSTER clstr_expression USING clstr_expression_minus_a",
  {
    "stmts": [
      {
        "stmt": {
          "ClusterStmt": {
            "indexname": "clstr_expression_minus_a",
            "relation": {
              "inh": true,
              "location": 8,
              "relname": "clstr_expression",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 299 1`] = `
[
  "CLUSTER clstr_expression USING clstr_expression_upper_b",
  {
    "stmts": [
      {
        "stmt": {
          "ClusterStmt": {
            "indexname": "clstr_expression_upper_b",
            "relation": {
              "inh": true,
              "location": 8,
              "relname": "clstr_expression",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`cluster.sql > line 319 1`] = `
[
  "DROP USER regress_clstr_user",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_clstr_user",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
